@@ -77,6 +77,7 @@ lib/Imager/Font/Truetype.pm
 lib/Imager/Font/FreeType2.pm
 lib/Imager/Font/Win32.pm
 lib/Imager/Font/Wrap.pm
+lib/Imager/Font/Image.pm
 lib/Imager/Fountain.pm
 lib/Imager/interface.pod
 lib/Imager/Matrix2d.pm
